suite/tests/goto/valid/simple.c
int main(void)
{
    goto done;

    return 1;
done:
    return 0;
}
