suite/tests/goto/invalid/missing-label.c
int main(void)
{
    goto not_there;
}
